--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,6 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:4000",
   "dependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.8",
@@ -12,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "babel-loader": "^8.2.3",
+    "http-proxy-middleware": "^2.0.1",
     "jwt-decode": "^3.1.2",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
