--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^6.1.7",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
+    "socket.io": "^4.4.1",
     "timeago": "^1.6.7",
     "validator": "^13.7.0"
   },
