--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1066.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^15.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
     "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "react-file-base64": "^1.0.3",
