--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^4.18.5",
     "aws-sdk": "^2.1066.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
