--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "babel-loader": "^8.2.3",
+    "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^2.0.1",
     "jwt-decode": "^3.1.2",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
