--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-  "start": "node ./bin/www",
-  "dev": "dotenv nodemon ./bin/www --inspect"
+  "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
 }
 }
