--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "node": "14.18.2"
   },
   "scripts": {
-    "backend-install": "npm install --prefix backend",
-    "backend": "npm run dev --prefix backend",
-    "frontend-install": "npm install --prefix frontend",
-    "frontend": "npm start --prefix frontend",
-    "frontend-build": "npm run build --prefix frontend",
-    "build": "npm run backend-install && npm run frontend-install && npm run frontend-build"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "author": "Andy Yu, Sonja Ng, Jason Chu, Anuj Gupta",
   "license": "ISC",
